--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Music Player</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="app.js"></script>
 </head>
 <body>
@@ -13,6 +14,12 @@
       <div class="top">
           <div id="music-img">
             <img>
+          </div>
+          <div id="listen">
+            <div id="range">
+              <input type="range" value="0" min="0" max="400">
+            </div>
+            
           </div>
 
       </div>
