--- a/index.html
+++ b/index.html
@@ -6,32 +6,48 @@
   <title>Music Player</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
   <script src="app.js"></script>
 </head>
 <body>
   <div class="Main">
     <div class="Player">
       <div class="top">
-          <div id="music-img">
-            <img>
+          <div id="music-cont">
+            <img id="music" src="Pics/2pac.jpg">
+          </div>
+          <div id="Description">
+            <div class="song-name">aaa</div>
+            <div class="artist-name">aaa</div>
           </div>
           <div id="listen">
-            <div id="range">
-              <input type="range" value="0" min="0" max="400">
+            <div id="range-cont">
+              <input type="range" value="0" min="0" max="400" id="range">
+              <audio id="AudioFile"></audio>
             </div>
-            
+            <div id="duration"></div>
+
           </div>
 
       </div>
-
-
-
+      <div class="bottom">
+        <div class="icons">
+          <i class="fa-solid fa-backward fa-2xl Play"></i>
+          <i class="fa-solid fa-play fa-2xl " id="play-pause"></i>
+          <i class="fa-solid fa-forward fa-2xl Play"></i>
+        </div>
+      </div>
     </div>
+    <div class="Songs">
+      <div class="song-cont">
+          <div class="songname"></div>
+          <div class="artistname"></div>
 
-
-
-
-    <div class="Songs"></div>
+      </div>
+      
+    </div>
 
   </div>
 
