--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="Player">
       <div class="top">
           <div id="music-cont">
-            <img>
+            <img id="img">
           </div>
           <div id="Description">
             <div class="song-name">aaa</div>
@@ -37,7 +37,10 @@
           <i class="fa-solid fa-backward fa-2xl Play"id="backward" onclick="
           changebackward();
             "></i>
-          <i class="fa-solid fa-play fa-2xl " id="play-pause" ></i>
+          <i class="fa-solid fa-play fa-2xl " id="play-pause" onclick="
+              
+              
+          "></i>
           <i class="fa-solid fa-forward fa-2xl Play" id="forward" onclick="
           changeforward();
           "></i>
@@ -48,15 +51,17 @@
       <div class="song-cont">
           <div class="songname">Changes</div>
           <div class="artistname">2Pac</div>
-          <i class="fa-solid fa-play" id="play-pause2" onclick="
+          <i class="fa-solid fa-play" id="play-pause0" onclick="
           aaa(0);
+          playmusic(0);
           "></i>
       </div>
       <div class="song-cont">
         <div class="songname">Praise The Lord</div>
         <div class="artistname">Asap Rocky</div>
-        <i class="fa-solid fa-play" id="play-pause2"  onclick="
+        <i class="fa-solid fa-play" id="play-pause1"  onclick="
        aaa(1);
+       playmusic(1);
         "></i>
     </div>
     <div class="song-cont">
@@ -64,20 +69,23 @@
       <div class="artistname">Ice Cube</div>
       <i class="fa-solid fa-play" id="play-pause2"  onclick="
       aaa(2);
+      playmusic(2);
       "></i>
   </div>
   <div class="song-cont">
     <div class="songname">Crucified</div>
     <div class="artistname">Pucci</div>
-    <i class="fa-solid fa-play" id="play-pause2"  onclick="
+    <i class="fa-solid fa-play" id="play-pause3"  onclick="
     aaa(3);
+    playmusic(3);
     "></i>
 </div>
 <div class="song-cont">
   <div class="songname">U got that</div>
   <div class="artistname">Halogen</div>
-  <i class="fa-solid fa-play" id="play-pause2"  onclick="
+  <i class="fa-solid fa-play" id="play-pause4"  onclick="
  aaa(4);
+ playmusic(4);
   "></i>
 </div>
     </div>
