--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="icons">
           <i class="fa-solid fa-backward fa-2xl Play"id="backward" onclick="
           changebackward();
+          console.log('aaaa');
             "></i>
           <i class="fa-solid fa-play fa-2xl " id="play-pause" onclick="
               
